--- a/parserator_web/templates/parserator_web/base.html
+++ b/parserator_web/templates/parserator_web/base.html
@@ -81,7 +81,15 @@
             />
           </a>
           <br>
-          ... and you!
+          ... and
+          <a
+            href="https://github.com/noahappelbaum"
+            target="_blank"
+            rel="noopener noreferref"
+            class="link-info"
+            >
+            Noah Appelbaum!
+          </a>
         </p>
       </div>
     </footer>
